src/test/resources/typeSystemTestModels/valid/constructors/ConstructorNoAccessModifierPair.java
public class ConstructorNoAccessModifierPair {

  public ConstructorNoAccessModifierPair(){

  }

  protected ConstructorNoAccessModifierPair() {

  }

  private ConstructorNoAccessModifierPair(){

  }


}
